--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hello this is Badawi </h1>
+  <h1>hello this is Badawi hosny </h1>
   <script src="app.js"></script>
 </body>
 </html>
